# rstrict

./: .gitignore  Cargo.toml  LICENSE  README.md  integration_tests.sh  m.md  test.sh
.github/workflows/: ci.yml
landlock/enumflags2/: .cargo-checksum.json
landlock/enumflags2_derive/: .cargo-checksum.json
landlock/jiff/: .cargo-checksum.json
landlock/jiff-static/: .cargo-checksum.json
landlock/landlock/: .cargo-checksum.json  Cargo.toml
src/: exec.rs  main.rs  sandbox.rs  utils.rs
src/exec/: mod.rs
src/sandbox/: mod.rs
src/utils/: mod.rs
