[package]
name = "rstrict"
version = "0.1.0"
edition = "2021"
description = "A Rust-based Landlock sandboxing tool"
license = "MIT"
readme = "README.md"
keywords = ["landlock", "sandbox", "security", "linux"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
landlock = "0.4.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
nix = { version = "0.29", features = ["process"] }
which = "5.0"
