[package]
name = "rstrict"
version = "0.1.10"
edition = "2021"
description = "A lightweight CLI to securely exec Linux processes inside the Kernels Landlock LSM sandbox for filesystem and network access control"
license = "MIT"
readme = "README.md"
keywords = ["landlock", "sandbox", "security", "linux"]
categories = ["command-line-utilities"]
authors = ["DannyH <creslin@gmail.com>"]
repository = "https://github.com/creslinux/rstrict"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
landlock = "0.4.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.8"
nix = { version = "0.29", features = ["process"] }
which = "5.0"
